fix background distortion

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,4 +1,6 @@
 body {
     background-image: url("https://i.im.ge/2023/06/07/hv0lTM.Nrkf77U.png");
     background-color: #efcd98;
+    background-repeat: no-repeat;
+    background-size: auto;
 }
